// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DumbMenuItem component should match a not selected menu item 1`] = `
<div
  className="menu-item-container"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="menu-item"
    onClick={[Function]}
  >
    <div
      className="thumb-img"
      style={
        Object {
          "backgroundImage": "url(https://foo.bar/img)",
        }
      }
    >
      <div
        className="thumb-img-background"
      />
    </div>
    <div
      className="thumb-body"
    >
      <div
        className="thumb-title"
        title="Foo"
      >
        Foo
      </div>
      <PostsAndContributorsCount
        className="menu-stats"
        numContributors={10}
        numPosts={123}
        showNumContributors={true}
        showNumPosts={true}
        vertical={false}
      />
    </div>
  </div>
</div>
`;

exports[`DumbMenuItem component should match a selected menu item 1`] = `
<div
  className="menu-item-container active"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="menu-item"
    onClick={[Function]}
  >
    <div
      className="thumb-img"
      style={
        Object {
          "backgroundImage": "url(https://foo.bar/img)",
        }
      }
    >
      <div
        className="thumb-img-background"
      />
    </div>
    <div
      className="thumb-body"
    >
      <div
        className="thumb-title"
        title="Foo"
      >
        Foo
      </div>
      <PostsAndContributorsCount
        className="menu-stats"
        numContributors={10}
        numPosts={123}
        showNumContributors={true}
        showNumPosts={true}
        vertical={false}
      />
    </div>
    <span
      className="thumb-arrow assembl-icon assembl-icon-right-dir"
    />
  </div>
</div>
`;
